# nbody

./: .gitignore  CMakeLists.txt  README.md  viz.ipynb
include/: grid.h  morton.h  quadtree.h
lib/: grid.cpp  morton.cpp  quadtree.cpp
src/: body.cpp  body.hpp  grid.cpp  grid.h  main.cpp  morton.cpp  morton.h  nbody.cpp  nbody.h  node.cpp  node.hpp  quadtree.cpp  quadtree.h  quadtree.hpp
util/: visualizer.py
